# diner-osm

./: .gitignore  LICENSE  README.md  osm_config.toml  pyproject.toml
.github/workflows/: test.yml
src/diner_osm/: cli.py  config.py  prepare.py  retrieve.py  visualize.py
tests/: conftest.py  helper.py  test_config.py  test_prepare.py  test_retrieve.py
tests/fixtures/: test.osm.pbf  test.toml  testing_data.opl
